--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.padre, .padre2, .padre3, .padre4, .padre5{
+.padre, .padre2, .padre3, .padre4, .padre5, .padre6{
     width: 550px;
     border: 2px solid blue;
     height: 200px;
@@ -64,4 +64,8 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
+}
+
+.padre6{
+    align-items: center;
 }
